<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundsplash"
    tools:context=".data.firebase.SignIn">

    <ImageButton
        android:id="@+id/sign_in_backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/sign_in_user_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:gravity="center"
        android:text="@string/sign_in_existing_user"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/emailSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_user_tv"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_address_sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="@color/caputMortuum" />

            <EditText
                android:id="@+id/password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="@color/caputMortuum" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/sign_in_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sign_in_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_user_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_forgot_password"
        android:visibility="gone"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>