<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ashGray"
    tools:context=".ui.LoginScreen">

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/login_register"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/login_button"
        android:text="@string/register_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/login_button"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in_existing_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_register" />

</androidx.constraintlayout.widget.ConstraintLayout>